@@ -41,12 +41,19 @@ POSSIBILITY OF SUCH DAMAGE.
 
 #ifdef WITH_PERSISTENCE
 
-#ifdef __APPLE__
-#include <libkern/OSByteOrder.h>
-#define htobe64(a) OSSwapHostToBigInt64(a)
-#define be64toh(a) OSSwapBigToHostInt64(a)
+#ifdef WITH_32BIT_DBID
+#  define DBID_HTON(a) htonl(a)
+#  define DBID_NTOH(a) ntohl(a)
 #else
-#include <endian.h>
+#  ifdef __APPLE__
+#    include <libkern/OSByteOrder.h>
+#    define DBID_HTON(a) OSSwapHostToBigInt64(a)
+#    define DBID_NTOH(a) OSSwapBigToHostInt64(a)
+#  else
+#    include <endian.h>
+#    define DBID_HTON(a) htobe64(a)
+#    define DBID_NTOH(a) be64toh(a)
+#  endif
 #endif
 
 /* DB read/write */
@@ -131,7 +138,7 @@ static int mqtt3_db_client_messages_write(mosquitto_db *db, int db_fd, mqtt3_con
 		write_e(db_fd, &i16temp, sizeof(uint16_t));
 		write_e(db_fd, context->core.id, slen);
 
-		i64temp = htobe64(cmsg->store->db_id);
+		i64temp = DBID_HTON(cmsg->store->db_id);
 		write_e(db_fd, &i64temp, sizeof(dbid_t));
 
 		i16temp = htons(cmsg->mid);
@@ -186,7 +193,7 @@ static int mqtt3_db_message_store_write(mosquitto_db *db, int db_fd)
 		write_e(db_fd, &i16temp, sizeof(uint16_t));
 		write_e(db_fd, &length, sizeof(uint32_t));
 
-		i64temp = htobe64(stored->db_id);
+		i64temp = DBID_HTON(stored->db_id);
 		write_e(db_fd, &i64temp, sizeof(dbid_t));
 
 		slen = strlen(stored->source_id);
@@ -295,7 +302,7 @@ static int _db_subs_retain_write(mosquitto_db *db, int db_fd, struct _mosquitto_
 		write_e(db_fd, &i16temp, sizeof(uint16_t));
 		write_e(db_fd, &length, sizeof(uint32_t));
 
-		i64temp = htobe64(node->retained->db_id);
+		i64temp = DBID_HTON(node->retained->db_id);
 		write_e(db_fd, &i64temp, sizeof(dbid_t));
 	}
 #undef write_e
@@ -363,7 +370,7 @@ int mqtt3_db_backup(mosquitto_db *db, bool cleanup, bool shutdown)
 	i8temp = sizeof(dbid_t);
 	write_e(db_fd, &i8temp, sizeof(uint8_t));
 	/* last db mid */
-	i64temp = htobe64(db->last_db_id);
+	i64temp = DBID_HTON(db->last_db_id);
 	write_e(db_fd, &i64temp, sizeof(dbid_t));
 #undef write_e
 
@@ -461,7 +468,7 @@ static int _db_client_msg_chunk_restore(mosquitto_db *db, int db_fd)
 	read_e(db_fd, client_id, slen);
 
 	read_e(db_fd, &i64temp, sizeof(dbid_t));
-	store_id = be64toh(i64temp);
+	store_id = DBID_NTOH(i64temp);
 
 	read_e(db_fd, &i16temp, sizeof(uint16_t));
 	mid = ntohs(i16temp);
@@ -498,7 +505,7 @@ static int _db_msg_store_chunk_restore(mosquitto_db *db, int db_fd)
 
 #define read_e(a, b, c) if(read(a, b, c) != c){ goto error; }
 	read_e(db_fd, &i64temp, sizeof(dbid_t));
-	store_id = be64toh(i64temp);
+	store_id = DBID_NTOH(i64temp);
 
 	read_e(db_fd, &i16temp, sizeof(uint16_t));
 	slen = ntohs(i16temp);
@@ -595,7 +602,7 @@ static int _db_retain_chunk_restore(mosquitto_db *db, int db_fd)
 		close(db_fd);
 		return 1;
 	}
-	store_id = be64toh(i64temp);
+	store_id = DBID_NTOH(i64temp);
 	store = db->msg_store;
 	while(store){
 		if(store->db_id == store_id){
@@ -700,7 +707,7 @@ int mqtt3_db_restore(mosquitto_db *db)
 						return 1;
 					}
 					read_e(fd, &i64temp, sizeof(dbid_t));
-					db->last_db_id = be64toh(i64temp);
+					db->last_db_id = DBID_NTOH(i64temp);
 					break;
 
 				case DB_CHUNK_MSG_STORE:
